--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -12,6 +12,8 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
     </ul>
   </div>
 </nav>
